<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/navigation_home" />

    <item
        android:id="@+id/navigation_explore"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_explore" />
    <item
        android:id="@+id/navigation_chats"
        android:icon="@drawable/ic_chat_black_24dp"
        android:title="@string/title_chat" />
    <item
        android:id="@+id/navigation_library"
        android:icon="@drawable/ic_video_library_black_24dp"
        android:title="@string/navigation_library" />

    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/ic_account_circle_black_24dp"
        android:title="@string/title_account" />


</menu>
